# motion_profile

./: CMakeLists.txt  README.md
src/: MotionProfile.cpp
